--- a/pages/api/projects_ml.json
+++ b/pages/api/projects_ml.json
@@ -8,5 +8,14 @@
     "tags": ["LangChain", "GenAI", "LLM", "GPT", "English", "NLP", "Python", "Streamlit"],
     "source_code": "https://github.com/alvaroalon2/LinguAIcoach",
     "demo": "https://linguaicoach.streamlit.app/"
+  },
+  {
+    "id": 1,
+    "name": "BioNLP",
+    "type": "pypi",
+    "image": "https://imgur.com/tAZotn3.png",
+    "description": "Python library for the processing of biomedical tex through the extraction and normalization of named entities.",
+    "tags": ["NLP", "BERT", "NER", "Python", "HuggingFace", "PyTorch"],
+    "source_code": "https://github.com/librairy/bio-ner"
   }
 ]
