--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-pdf": "^9.2.1"
+    "react-pdf": "^9.2.1",
+    "@notionhq/client": "^0.2.2"
   }
 }
